added guard for user and finish auth apis
